Minor change in styling - checkout page

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -203,7 +203,8 @@ tr.spaceOver>td {
     font-weight: 400;
 }
 
-.container-form .price {
+.container-form #checkout-prodamount,
+.container-form #checkout-totamount {
     color: black;
 }
 
