--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -87,7 +87,7 @@
   <div class="col-25">
     <div class="container-form">
       <h4>Dina varor
-        <span class="price">
+        <span class="price" id="checkout-prodamount">
           <i class="fa fa-shopping-cart"></i>
           <b>4</b>
         </span>
@@ -97,7 +97,7 @@
       <p><a href="#">Product 3</a> <span class="price">149 kr</span></p>
       <p><a href="#">Product 4</a> <span class="price">25 kr</span></p>
       <hr>
-      <p>Totalsumma <span class="price"><b>473 kr</b></span></p>
+      <p>Totalsumma <span class="price" id="checkout-totamount"><b>473 kr</b></span></p>
     </div>
   </div>
 
