--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -90,9 +90,8 @@
 
 <!-- Cart -->
 <div class="container">
-    <table style="width:50%" class="listofproducts">
-    </table>
-
+    <div style="width:50%" class="listofproducts">
+    </div>
     <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="emptyCart()">Töm vagnen</button>
     <a href="/checkout" class="btn btn-primary">Betala</a>
 </div>
