--- a/src/main/resources/templates/frontpage.html
+++ b/src/main/resources/templates/frontpage.html
@@ -24,7 +24,8 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <div class="modal-body">
+            <!-- Använd klassen cartsummation för en summering och cartlist för en utförlig lista -->
+            <div class="modal-body cartsummation">
                 <ul>
                     <li> Detta behöver uppdateras med en lista av varor </li>
                 </ul>
@@ -97,7 +98,7 @@
 
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="#"><span class="glyphicon glyphicon-user"></span> Mitt konto</a></li>
-                <li><span id="cartsum" class="productcounter">0</span></li>
+                <li><span id="cartsum" class="productsummation productcounter">0</span></li>
                 <li><a href="/cart"><span class="glyphicon glyphicon-shopping-cart"></span> Varukorg</a></li>
             </ul>
         </div>
