Changed to light logo in navbar - added to all HTML pages

--- a/src/main/resources/templates/Books/Sci-Fi.html
+++ b/src/main/resources/templates/Books/Sci-Fi.html
@@ -53,7 +53,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <img src="/images/logga-liten.svg" id="navbarlogo" onclick="location.href='/'">
+            <img src="/images/logga-liten-ljus.svg" id="navbarlogo" onclick="location.href='/'">
         </div>
 <div class="collapse navbar-collapse" id="myNavbar">
     <ul class="nav navbar-nav">
