--- a/src/main/resources/templates/Clothes/SummerClothes.html
+++ b/src/main/resources/templates/Clothes/SummerClothes.html
@@ -44,15 +44,16 @@
     </div>
 </div>
 
+<!-- Navbar -->
 <nav class="navbar navbar-inverse">
-    <div class="container-fluid" style="background-color:#0E2A36;">
+    <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#"></a>
+            <img src="/images/logga-liten-ljus.svg" id="navbarlogo" onclick="location.href='/'">
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
