--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -53,52 +53,52 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <img src="/images/logga-liten-ljus.svg" id="navbarlogo" onclick="location.href='/';">
+      <img src="/images/logga-liten-ljus.svg" id="navbarlogo" onclick="location.href='/'">
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Kläder <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Nyinkommet</a></li>
-            <li><a href="#">Sommarkläder</a></li>
-            <li><a href="#">Rabatterade varor</a></li>
+            <li><a href="/Clothes/NewItems">Nyinkommet</a></li>
+            <li><a href="/Clothes/SummerClothes">Sommarkläder</a></li>
+            <li><a href="/Clothes/DiscountItems">Rabatterade varor</a></li>
           </ul>
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Hem & inredning<span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Möbler</a></li>
-            <li><a href="#">Akvarium</a></li>
-            <li><a href="#">Tavlor</a></li>
+            <li><a href="/Home&style/Furniture">Möbler</a></li>
+            <li><a href="/Home&style/Aquarium">Akvarium</a></li>
+            <li><a href="/Home&style/Paintings">Tavlor</a></li>
           </ul>
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Böcker <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Astrid Lindgrens Kollektion</a></li>
-            <li><a href="#">Antika Grekland</a></li>
-            <li><a href="#">Sci-Fi</a></li>
+            <li><a href="/Books/AstridLindgrenCollection">Astrid Lindgrens Kollektion</a></li>
+            <li><a href="/Books/AnticGreece">Antika Grekland</a></li>
+            <li><a href="/Books/Sci-Fi">Sci-Fi</a></li>
           </ul>
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Hobby <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Frimärke</a></li>
-            <li><a href="#">Friluft</a></li>
-            <li><a href="#">Test</a></li>
+            <li><a href="/Hobby/Stamp">Frimärke</a></li>
+            <li><a href="/Hobby/OpenAir">Friluft</a></li>
+            <li><a href="/Hobby/Movie">Filmer</a></li>
           </ul>
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Vintage <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">1920-1950</a></li>
-            <li><a href="#">1950-1970</a></li>
-            <li><a href="#">1970-2000</a></li>
+            <li><a href="/Vintage/1920">1920-1950</a></li>
+            <li><a href="/Vintage/1950">1950-1970</a></li>
+            <li><a href="/Vintage/1970">1970-2000</a></li>
           </ul>
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Om oss <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Vision</a></li>
-            <li><a href="#">Historia</a></li>
-            <li><a href="#">Vet ej</a></li>
+            <li><a href="/AboutUs/AboutUs">Vision</a></li>
+            <li><a href="/AboutUs/History">Historia</a></li>
+            <li><a href="/AboutUs/MoreAboutUs">Mer om oss</a></li>
           </ul>
       </ul>
+
       <ul class="nav navbar-nav navbar-right">
-        <li><span id="cartsum">0</span></li>
         <li><a href="#"><span class="glyphicon glyphicon-user"></span> Mitt konto</a></li>
-        <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span> Varukorg</a></li>
-        <li><a onclick="location.href='/';" id="back-btn"><span class="glyphicon glyphicon-backward"></span> Tillbaka</a></li>
+        <li><span id="cartsum" class="productsummation productcounter">0</span></li>
+        <li><a href="/cart"><span class="glyphicon glyphicon-shopping-cart"></span> Varukorg</a></li>
       </ul>
     </div>
   </div>
