Updated categories. Products added.

--- a/src/main/resources/templates/Clothes/DiscountItems.html
+++ b/src/main/resources/templates/Clothes/DiscountItems.html
@@ -70,15 +70,18 @@
           </ul>
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Böcker <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="/Books/AstridLindgrenCollection">Astrid Lindgrens Kollektion</a></li>
-            <li><a href="/Books/AnticGreece">Antika Grekland</a></li>
-            <li><a href="/Books/Sci-Fi">Sci-Fi</a></li>
+            <li><a href="/Books/allBooks">Alla böcker</a></li>
+            <li><a href="/Books/childrensBooks">Barnböcker</a></li>
+            <li><a href="/Books/non-fiction">Facklitteratur</a></li>
+            <li><a href="/Books/fiction">Skönlitteratur</a></li>
           </ul>
-        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Hobby <span class="caret"></span></a>
+        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Hobby & Fritid <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="/Hobby/Stamp">Frimärke</a></li>
-            <li><a href="/Hobby/OpenAir">Friluft</a></li>
-            <li><a href="/Hobby/Movie">Filmer</a></li>
+            <li><a href="/Hobby/allHobbies">Allt inom hobby & fritid</a></li>
+            <li><a href="/Hobby/hobbiesAndGames">Hobby & Spel</a></li>
+            <li><a href="/Hobby/moviesAndMusic">Film & Musik</a></li>
+            <li><a href="/Hobby/sport">Sport & Fritid </a></li>
+            <li><a href="/Hobby/toys">Leksaker</a></li>
           </ul>
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Vintage <span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -88,9 +91,9 @@
           </ul>
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Om oss <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="/AboutUs/AboutUs">Vision</a></li>
-            <li><a href="/AboutUs/History">Historia</a></li>
-            <li><a href="/AboutUs/MoreAboutUs">Mer om oss</a></li>
+            <li><a href="/AboutUs/AboutUs">Vår vision</a></li>
+            <li><a href="/AboutUs/contact">Kontakta oss</a></li>
+            <li><a href="/AboutUs/faq">Vanliga frågor</a></li>
           </ul>
       </ul>
 
@@ -134,6 +137,8 @@
     <button type="button" class="btn btn-danger" id="footerbtn" >Skicka</button>
   </form>
 </footer>
+
+<script src="shoppingcart.js"></script>
 
 </body>
 </html>
