--- a/src/main/resources/templates/Hobby/allHobbies.html
+++ b/src/main/resources/templates/Hobby/allHobbies.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-  <title>Bootstrap Example</title>
+  <title>Allt inom hobby & fritid</title>
   <link rel="icon" type="image/x-icon" href="/images/logga-liten-ljus.svg">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -42,6 +42,7 @@
     <img onclick="location.href='/';" src="/images/loppisshoppis3.png" height="300">
   </div>
 </div>
+
 
 <!-- Navbar -->
 <nav class="navbar navbar-inverse">
@@ -108,11 +109,12 @@
 <div class="container">
   <div class="row">
     <div class="productlisting" th:each="product : ${products}">
-      <div class="col-sm-4" th:if="${product.category =='Paintings'}">
+      <div class="col-sm-4" th:if="${product.category =='Hobby & Spel' || product.category =='Film & Musik' || product.category =='Sport & Fritid' || product.category =='Leksaker'}">
         <div class="panel panel-primary stretched-link" id="productpanel">
-          <div class="panel-heading" th:text="${product.name}" href="'/product/' + ${product.id}"></div>
+          <div class="panel-heading" th:text="${product.name}" th:onclick="'location.href=\'/product/' + ${product.id} + '\''"></div>
           <div class="panel-body">
-            <img th:src="${product.image}" class="img-responsive" alt="Image" id="productimg">
+            <img th:src="${product.image}" class="img-responsive" alt="Image" id="productimg"
+                 th:onclick="'location.href=\'/product/' + ${product.id} + '\''">
           </div>
           <div class="panel-footer" th:text="'Pris: ' + ${product.price} + ' kr'"></div>
           <a class="btn btn-primary " th:href="'/product/' + ${product.id}" >Mer info</a>
@@ -128,7 +130,6 @@
 <div id="test2"></div>
 <div id="test">
 </div>
-
 
 <footer class="container-fluid text-center">
   <p>Bli en återvinnare!</p>
