--- a/src/main/resources/templates/Books/fiction.html
+++ b/src/main/resources/templates/Books/fiction.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Bootstrap Example</title>
+    <title>Sci-Fi</title>
     <link rel="icon" type="image/x-icon" href="/images/logga-liten-ljus.svg">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,32 +10,32 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <style>
-
     </style>
 </head>
 <body>
 
-<!-- Modal -->
+<!-- Modal: Cart notification -->
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <h4 class="modal-title" id="exampleModalLabel"> En vara har lagts till i varukorgen: </h4>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                Varan tillagd i varukorgen!
+                <ul>
+                    <li> Detta behöver uppdateras med en lista av varor </li>
+                </ul>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Stäng</button>
+                <button type="button" class="btn btn-primary" onclick="location.href='/cart'">Gå till varukorgen</button>
             </div>
         </div>
     </div>
 </div>
-
 
 <!-- Header with logo -->
 <div class="jumbotron">
@@ -106,17 +106,22 @@
         </div>
     </div>
 </nav>
+
+<!-- <a class="categorylinks" href="/Books/Sci-Fi"> Sci-Fi </a> -->
+
+<!-- Product image and information -->
 <div class="container">
     <div class="row">
         <div class="productlisting" th:each="product : ${products}">
-            <div class="col-sm-4" th:if="${product.category =='New'}">
+            <div class="col-sm-4" th:if="${product.category =='Skönlitteratur'}">
                 <div class="panel panel-primary stretched-link" id="productpanel">
-                    <div class="panel-heading" th:text="${product.category}" href="'/product/' + ${product.id}"></div>
+                    <div class="panel-heading" th:text="${product.name}" th:onclick="'location.href=\'/product/' + ${product.id} + '\''"></div>
                     <div class="panel-body">
-                        <img th:src="${product.image}" class="img-responsive" alt="Image" id="productimg">
+                        <img th:src="${product.image}" class="img-responsive" alt="Image" id="productimg"
+                             th:onclick="'location.href=\'/product/' + ${product.id} + '\''">
                     </div>
                     <div class="panel-footer" th:text="'Pris: ' + ${product.price} + ' kr'"></div>
-                    <a class="btn btn-primary " th:href="'/product/' + ${product.id}" >Mer info</a>
+                    <a class="btn btn-primary " th:href="'/product/' + ${product.id}">Mer info</a>
 
                     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" th:onclick="addProduct([[${product.id}]],[[${product.name}]],[[${product.price}]])">
                         Köp
@@ -127,10 +132,10 @@
     </div>
 </div><br><br>
 
-<div id="test2"></div>
 <div id="test">
 </div>
 
+<!-- Footer -->
 <footer class="container-fluid text-center">
     <p>Bli en återvinnare!</p>
     <form class="form-inline">Anmäl dig till vårt nyhetsbrev:
