--- a/src/main/resources/templates/Hobby/hobbiesAndGames.html
+++ b/src/main/resources/templates/Hobby/hobbiesAndGames.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-  <title>Antika Grekland</title>
+  <title>Hobby & Spel</title>
   <link rel="icon" type="image/x-icon" href="/images/logga-liten-ljus.svg">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,28 +10,27 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <style>
+
   </style>
 </head>
 <body>
 
-<!-- Modal: Cart notification -->
+<!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title" id="exampleModalLabel"> En vara har lagts till i varukorgen: </h4>
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-        <ul>
-          <li> Detta behöver uppdateras med en lista av varor </li>
-        </ul>
+        Varan tillagd i varukorgen!
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Stäng</button>
-        <button type="button" class="btn btn-primary" onclick="location.href='/cart'">Gå till varukorgen</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
       </div>
     </div>
   </div>
@@ -71,15 +70,18 @@
           </ul>
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Böcker <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="/Books/AstridLindgrenCollection">Astrid Lindgrens Kollektion</a></li>
-            <li><a href="/Books/AnticGreece">Antika Grekland</a></li>
-            <li><a href="/Books/Sci-Fi">Sci-Fi</a></li>
+            <li><a href="/Books/allBooks">Alla böcker</a></li>
+            <li><a href="/Books/childrensBooks">Barnböcker</a></li>
+            <li><a href="/Books/non-fiction">Facklitteratur</a></li>
+            <li><a href="/Books/fiction">Skönlitteratur</a></li>
           </ul>
-        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Hobby <span class="caret"></span></a>
+        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Hobby & Fritid <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="/Hobby/Stamp">Frimärke</a></li>
-            <li><a href="/Hobby/OpenAir">Friluft</a></li>
-            <li><a href="/Hobby/Movie">Filmer</a></li>
+            <li><a href="/Hobby/allHobbies">Allt inom hobby & fritid</a></li>
+            <li><a href="/Hobby/hobbiesAndGames">Hobby & Spel</a></li>
+            <li><a href="/Hobby/moviesAndMusic">Film & Musik</a></li>
+            <li><a href="/Hobby/sport">Sport & Fritid </a></li>
+            <li><a href="/Hobby/toys">Leksaker</a></li>
           </ul>
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Vintage <span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -89,9 +91,9 @@
           </ul>
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Om oss <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="/AboutUs/AboutUs">Vision</a></li>
-            <li><a href="/AboutUs/History">Historia</a></li>
-            <li><a href="/AboutUs/MoreAboutUs">Mer om oss</a></li>
+            <li><a href="/AboutUs/AboutUs">Vår vision</a></li>
+            <li><a href="/AboutUs/contact">Kontakta oss</a></li>
+            <li><a href="/AboutUs/faq">Vanliga frågor</a></li>
           </ul>
       </ul>
 
@@ -103,14 +105,12 @@
     </div>
   </div>
 </nav>
-
-<!-- Product image and information -->
 <div class="container">
   <div class="row">
     <div class="productlisting" th:each="product : ${products}">
-      <div class="col-sm-4" th:if="${product.category =='History'}">
+      <div class="col-sm-4" th:if="${product.category =='Hobby & Spel'}">
         <div class="panel panel-primary stretched-link" id="productpanel">
-          <div class="panel-heading" th:text="${product.category}" th:onclick="'location.href=\'/product/' + ${product.id} + '\''"></div>
+          <div class="panel-heading" th:text="${product.name}" th:onclick="'location.href=\'/product/' + ${product.id} + '\''"></div>
           <div class="panel-body">
             <img th:src="${product.image}" class="img-responsive" alt="Image" id="productimg"
                  th:onclick="'location.href=\'/product/' + ${product.id} + '\''">
@@ -126,11 +126,10 @@
     </div>
   </div>
 </div><br><br>
-
+<div id="test2"></div>
 <div id="test">
 </div>
 
-<!-- Footer -->
 <footer class="container-fluid text-center">
   <p>Bli en återvinnare!</p>
   <form class="form-inline">Anmäl dig till vårt nyhetsbrev:
