--- a/src/main/resources/templates/Hobby/toys.html
+++ b/src/main/resources/templates/Hobby/toys.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-  <title>Bootstrap Example</title>
+  <title>Leksaker</title>
   <link rel="icon" type="image/x-icon" href="/images/logga-liten-ljus.svg">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -43,6 +43,7 @@
   </div>
 </div>
 
+
 <!-- Navbar -->
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
@@ -70,15 +71,18 @@
           </ul>
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Böcker <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="/Books/AstridLindgrenCollection">Astrid Lindgrens Kollektion</a></li>
-            <li><a href="/Books/AnticGreece">Antika Grekland</a></li>
-            <li><a href="/Books/Sci-Fi">Sci-Fi</a></li>
+            <li><a href="/Books/allBooks">Alla böcker</a></li>
+            <li><a href="/Books/childrensBooks">Barnböcker</a></li>
+            <li><a href="/Books/non-fiction">Facklitteratur</a></li>
+            <li><a href="/Books/fiction">Skönlitteratur</a></li>
           </ul>
-        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Hobby <span class="caret"></span></a>
+        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Hobby & Fritid <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="/Hobby/Stamp">Frimärke</a></li>
-            <li><a href="/Hobby/OpenAir">Friluft</a></li>
-            <li><a href="/Hobby/Movie">Filmer</a></li>
+            <li><a href="/Hobby/allHobbies">Allt inom hobby & fritid</a></li>
+            <li><a href="/Hobby/hobbiesAndGames">Hobby & Spel</a></li>
+            <li><a href="/Hobby/moviesAndMusic">Film & Musik</a></li>
+            <li><a href="/Hobby/sport">Sport & Fritid </a></li>
+            <li><a href="/Hobby/toys">Leksaker</a></li>
           </ul>
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Vintage <span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -88,9 +92,9 @@
           </ul>
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Om oss <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="/AboutUs/AboutUs">Vision</a></li>
-            <li><a href="/AboutUs/History">Historia</a></li>
-            <li><a href="/AboutUs/MoreAboutUs">Mer om oss</a></li>
+            <li><a href="/AboutUs/AboutUs">Vår vision</a></li>
+            <li><a href="/AboutUs/contact">Kontakta oss</a></li>
+            <li><a href="/AboutUs/faq">Vanliga frågor</a></li>
           </ul>
       </ul>
 
@@ -105,11 +109,12 @@
 <div class="container">
   <div class="row">
     <div class="productlisting" th:each="product : ${products}">
-      <div class="col-sm-4" th:if="${product.category =='Movie'}">
+      <div class="col-sm-4" th:if="${product.category =='Leksaker'}">
         <div class="panel panel-primary stretched-link" id="productpanel">
-          <div class="panel-heading" th:text="${product.category}" href="'/product/' + ${product.id}"></div>
+          <div class="panel-heading" th:text="${product.name}" th:onclick="'location.href=\'/product/' + ${product.id} + '\''"></div>
           <div class="panel-body">
-            <img th:src="${product.image}" class="img-responsive" alt="Image" id="productimg">
+            <img th:src="${product.image}" class="img-responsive" alt="Image" id="productimg"
+                 th:onclick="'location.href=\'/product/' + ${product.id} + '\''">
           </div>
           <div class="panel-footer" th:text="'Pris: ' + ${product.price} + ' kr'"></div>
           <a class="btn btn-primary " th:href="'/product/' + ${product.id}" >Mer info</a>
@@ -122,7 +127,6 @@
     </div>
   </div>
 </div><br><br>
-
 <div id="test2"></div>
 <div id="test">
 </div>
@@ -134,6 +138,8 @@
     <button type="button" class="btn btn-danger" id="footerbtn" >Skicka</button>
   </form>
 </footer>
+
+<script src="shoppingcart.js"></script>
 
 </body>
 </html>
