bytt namn på kategorier, lagt till fler annonser

--- a/src/main/resources/templates/Clothes/Children.html
+++ b/src/main/resources/templates/Clothes/Children.html
@@ -57,9 +57,10 @@
       <ul class="nav navbar-nav">
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Kläder <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Nyinkommet</a></li>
-            <li><a href="#">Sommarkläder</a></li>
-            <li><a href="#">Rabatterade varor</a></li>
+            <li><a href="/Clothes/allClothes">Alla kläder</a></li>
+            <li><a href="/Clothes/Women">Dam</a></li>
+            <li><a href="/Clothes/Men">Herr</a></li>
+            <li><a href="/Clothes/Children">Barn</a></li>
           </ul>
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Hem & inredning<span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -104,11 +105,12 @@
 <div class="container">
   <div class="row">
     <div class="productlisting" th:each="product : ${products}">
-      <div class="col-sm-4" th:if="${product.category =='Discount'}">
+      <div class="col-sm-4" th:if="${product.category =='Barn'}">
         <div class="panel panel-primary stretched-link" id="productpanel">
           <div class="panel-heading" th:text="${product.category}" href="'/product/' + ${product.id}"></div>
           <div class="panel-body">
-            <img th:src="${product.image}" class="img-responsive" alt="Image" id="productimg">
+            <img th:src="${product.image}" class="img-responsive" alt="Image" id="productimg"
+                 th:onclick="'location.href=\'/product/' + ${product.id} + '\''">
           </div>
           <div class="panel-footer" th:text="'Pris: ' + ${product.price} + ' kr'"></div>
           <a class="btn btn-primary " th:href="'/product/' + ${product.id}" >Mer info</a>
