--- a/src/main/resources/templates/Books/AnticGreece.html
+++ b/src/main/resources/templates/Books/AnticGreece.html
@@ -30,7 +30,7 @@
         </ul>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Stäng</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Fortsätt shoppa</button>
         <button type="button" class="btn btn-primary" onclick="location.href='/cart'">Gå till varukorgen</button>
       </div>
     </div>
