--- a/src/main/resources/templates/Clothes/Men.html
+++ b/src/main/resources/templates/Clothes/Men.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Varukorgen</title>
+    <title>Bootstrap Example</title>
     <link rel="icon" type="image/x-icon" href="/images/logga-liten-ljus.svg">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,9 +10,32 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <style>
+
     </style>
 </head>
-<body onload="printCart()">
+<body>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                Varan tillagd i varukorgen!
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 <!-- Header with logo -->
 <div class="jumbotron">
@@ -21,16 +44,15 @@
     </div>
 </div>
 
-<!-- Navbar -->
 <nav class="navbar navbar-inverse">
-    <div class="container-fluid">
+    <div class="container-fluid" style="background-color:#0E2A36;">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <img src="/images/logga-liten.svg" id="navbarlogo" onclick="location.href='/'">
+            <a class="navbar-brand" href="#"></a>
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
@@ -41,7 +63,7 @@
                         <li><a href="/Clothes/Men">Herr</a></li>
                         <li><a href="/Clothes/Children">Barn</a></li>
                     </ul>
-                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Hemmet<span class="caret"></span></a>
+                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Hem & inredning<span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">Möbler</a></li>
                         <li><a href="#">Akvarium</a></li>
@@ -49,9 +71,9 @@
                     </ul>
                 <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Böcker <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Astrid Lindgrens Kollektion</a></li>
-                        <li><a href="#">Antika Grekland</a></li>
-                        <li><a href="#">Sci-Fi</a></li>
+                        <li><a href="/AstridLindgrenCollection">Astrid Lindgrens Kollektion</a></li>
+                        <li><a href="/AnticGreece">Antika Grekland</a></li>
+                        <li><a href="/Sci-Fi">Sci-Fi</a></li>
                     </ul>
                 <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Hobby <span class="caret"></span></a>
                     <ul class="dropdown-menu">
@@ -65,33 +87,47 @@
                         <li><a href="#">1950-1970</a></li>
                         <li><a href="#">1970-2000</a></li>
                     </ul>
-                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Om oss <span class="caret"></span></a>
+                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" onclick="location.href='/AboutUs';" style="cursor: pointer;">Om oss <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Vision</a></li>
+                        <li><a href="/AboutUs">Vision</a></li>
                         <li><a href="#">Historia</a></li>
                         <li><a href="#">Vet ej</a></li>
                     </ul>
             </ul>
-
             <ul class="nav navbar-nav navbar-right">
                 <li><span id="cartsum">0</span></li>
                 <li><a href="#"><span class="glyphicon glyphicon-user"></span> Mitt konto</a></li>
                 <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span> Varukorg</a></li>
-                <li><a onclick="location.href='/';" id="back-btn"><span class="glyphicon glyphicon-backward"></span> Tillbaka</a></li>
+                <li><a onclick="location.href='/';" style="cursor: pointer;"><span class="glyphicon glyphicon-backward"></span> Tillbaka</a></li>
             </ul>
         </div>
     </div>
 </nav>
-
-<!-- Cart -->
 <div class="container">
-    <div class="listofproducts">
+    <div class="row">
+        <div class="productlisting" th:each="product : ${products}">
+            <div class="col-sm-4" th:if="${product.category =='Herr'}">
+                <div class="panel panel-primary stretched-link" id="productpanel">
+                    <div class="panel-heading" th:text="${product.category}" href="'/product/' + ${product.id}"></div>
+                    <div class="panel-body">
+                        <img th:src="${product.image}" class="img-responsive" alt="Image" id="productimg"
+                             th:onclick="'location.href=\'/product/' + ${product.id} + '\''">
+                    </div>
+                    <div class="panel-footer" th:text="'Pris: ' + ${product.price} + ' kr'"></div>
+                    <a class="btn btn-primary " th:href="'/product/' + ${product.id}" >Mer info</a>
+
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" th:onclick="addProduct([[${product.id}]],[[${product.name}]],[[${product.price}]])">
+                        Köp
+                    </button>
+                </div>
+            </div>
+        </div>
     </div>
-    <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="emptyCart()">Töm vagnen</button>
-    <a href="/checkout" class="btn btn-primary">Betala</a>
+</div><br><br>
+<div id="test2"></div>
+<div id="test">
 </div>
 
-<!-- Footer -->
 <footer class="container-fluid text-center">
     <p>Bli en återvinnare!</p>
     <form class="form-inline">Anmäl dig till vårt nyhetsbrev:
@@ -99,8 +135,6 @@
         <button type="button" class="btn btn-danger" id="footerbtn" >Skicka</button>
     </form>
 </footer>
-
-<script src="shoppingcart.js"></script>
 
 </body>
 </html>
