--- a/src/main/resources/templates/Home/allHome.html
+++ b/src/main/resources/templates/Home/allHome.html
@@ -36,7 +36,6 @@
     </div>
 </div>
 
-
 <!-- Header with logo -->
 <div class="jumbotron">
     <div class="container text-center">
@@ -58,15 +57,17 @@
             <ul class="nav navbar-nav">
                 <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Kläder <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Nyinkommet</a></li>
-                        <li><a href="#">Sommarkläder</a></li>
-                        <li><a href="#">Rabatterade varor</a></li>
+                        <li><a href="/Clothes/allClothes">Alla kläder</a></li>
+                        <li><a href="/Clothes/Women">Dam</a></li>
+                        <li><a href="/Clothes/Men">Herr</a></li>
+                        <li><a href="/Clothes/Children">Barn</a></li>
                     </ul>
-                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Hem & inredning<span class="caret"></span></a>
+                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Hemmet<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Möbler</a></li>
-                        <li><a href="#">Akvarium</a></li>
-                        <li><a href="#">Tavlor</a></li>
+                        <li><a href="/Home/allHome">Allt för hemmet</a></li>
+                        <li><a href="/Home/homeDecor">Inredning</a></li>
+                        <li><a href="/Home/electronics">Hemelektronik</a></li>
+                        <li><a href="/Home/kitchenSupplies">Husgeråd</a></li>
                     </ul>
                 <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Böcker <span class="caret"></span></a>
                     <ul class="dropdown-menu">
@@ -105,11 +106,12 @@
 <div class="container">
     <div class="row">
         <div class="productlisting" th:each="product : ${products}">
-            <div class="col-sm-4" th:if="${product.category =='Summer'}">
+            <div class="col-sm-4" th:if="${product.category =='Inredning' OR product.category == 'Husgeråd' OR product.category == 'Hemelektronik'}">
                 <div class="panel panel-primary stretched-link" id="productpanel">
                     <div class="panel-heading" th:text="${product.category}" href="'/product/' + ${product.id}"></div>
                     <div class="panel-body">
-                        <img th:src="${product.image}" class="img-responsive" alt="Image" id="productimg">
+                        <img th:src="${product.image}" class="img-responsive" alt="Image" id="productimg"
+                             th:onclick="'location.href=\'/product/' + ${product.id} + '\''">
                     </div>
                     <div class="panel-footer" th:text="'Pris: ' + ${product.price} + ' kr'"></div>
                     <a class="btn btn-primary " th:href="'/product/' + ${product.id}" >Mer info</a>
@@ -122,6 +124,7 @@
         </div>
     </div>
 </div><br><br>
+
 <div id="test2"></div>
 <div id="test">
 </div>
