--- a/src/main/resources/templates/frontpage.html
+++ b/src/main/resources/templates/frontpage.html
@@ -31,7 +31,7 @@
                 </ul>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Stäng</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Fortsätt shoppa</button>
                 <button type="button" class="btn btn-primary" onclick="location.href='/cart'">Gå till varukorgen</button>
             </div>
         </div>
@@ -60,15 +60,17 @@
             <ul class="nav navbar-nav">
                 <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Kläder <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="/Clothes/NewItems">Nyinkommet</a></li>
-                        <li><a href="/Clothes/SummerClothes">Sommarkläder</a></li>
-                        <li><a href="/Clothes/DiscountItems">Rabatterade varor</a></li>
+                        <li><a href="/Clothes/allClothes">Alla kläder</a></li>
+                        <li><a href="/Clothes/Women">Dam</a></li>
+                        <li><a href="/Clothes/Men">Herr</a></li>
+                        <li><a href="/Clothes/Children">Barn</a></li>
                     </ul>
-                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Hem & inredning<span class="caret"></span></a>
+                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Hemmet<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="/Home&style/Furniture">Möbler</a></li>
-                        <li><a href="/Home&style/Aquarium">Akvarium</a></li>
-                        <li><a href="/Home&style/Paintings">Tavlor</a></li>
+                        <li><a href="/Home/allHome">Allt för hemmet</a></li>
+                        <li><a href="/Home/homeDecor">Inredning</a></li>
+                        <li><a href="/Home/electronics">Hemelektronik</a></li>
+                        <li><a href="Home/kitchenSupplies">Husgeråd</a></li>
                     </ul>
                 <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Böcker <span class="caret"></span></a>
                     <ul class="dropdown-menu">
