Added contact form. Made more product images clickable.

--- a/src/main/resources/templates/AboutUs/contact.html
+++ b/src/main/resources/templates/AboutUs/contact.html
@@ -15,22 +15,23 @@
 </head>
 <body>
 
-<!-- Modal -->
+<!-- Modal - Message sent notification -->
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <h4 class="modal-title" id="exampleModalLabel"> Ditt meddelande har skickats. </h4>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-        Varan tillagd i varukorgen!
+        Tack för ditt meddelande!
+        Vi återkommer inom 2 vardagar.
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="btn btn-secondary" onclick="location.href='/AboutUs/contact'"> Nytt meddelande</button>
+        <button type="button" class="btn btn-primary" onclick="location.href='/'"> Fortsätt shoppa! </button>
       </div>
     </div>
   </div>
@@ -105,27 +106,67 @@
     </div>
   </div>
 </nav>
-<div class="container">
+
+<div class="container-contactform">
   <div class="row">
-    <div class="productlisting" th:each="product : ${products}">
-      <div class="col-sm-4" th:if="${product.category =='History'}">
-        <div class="panel panel-primary stretched-link" id="productpanel">
-          <div class="panel-heading" th:text="${product.category}" href="'/product/' + ${product.id}"></div>
-          <div class="panel-body">
-            <img th:src="${product.image}" class="img-responsive" alt="Image" id="productimg">
-          </div>
-          <div class="panel-footer" th:text="'Pris: ' + ${product.price} + ' kr'"></div>
-          <a class="btn btn-primary " th:href="'/product/' + ${product.id}" >Mer info</a>
+    <div class="col-md-6 col-md-offset-3">
+      <div class="well well-sm" id="contactform">
+        <form class="form-horizontal" action="" method="post">
+          <fieldset>
+            <legend class="text-center">Kontakta oss</legend>
 
-          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" th:onclick="addProduct([[${product.id}]],[[${product.name}]],[[${product.price}]])">
-            Köp
-          </button>
-        </div>
+            <!-- Name input-->
+            <div class="form-group">
+              <label class="col-md-3 control-label" for="name">Ditt namn</label>
+              <div class="col-md-9">
+                <input id="name" name="name" type="text" placeholder="Namn Namnsson" class="form-control">
+              </div>
+            </div>
+
+            <!-- Subject input-->
+            <div class="form-group">
+              <label class="col-md-3 control-label" for="name">Ditt ärende</label>
+              <div class="col-md-9">
+                <select name="subject" id="subject">
+                  <option value="">Välj ämne...</option>
+                  <option value="Kundtjänst"> Kundtjänst </option>
+                  <option value="Skänka varor"> Skänka varor </option>
+                  <option value="Retur & reklamation"> Retur & reklamation </option>
+                  <option value="Annat"> Annat </option>
+                </select>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <label class="col-md-3 control-label" for="email">Din e-postadress</label>
+              <div class="col-md-9">
+                <input id="email" name="email" type="text" placeholder="namn@mail.com" class="form-control">
+              </div>
+            </div>
+
+            <!-- Message body -->
+            <div class="form-group">
+              <label class="col-md-3 control-label" for="message">Ditt meddelande</label>
+              <div class="col-md-9">
+                <textarea class="form-control" id="message" name="message" placeholder="Skriv in ditt meddelande här..." rows="5"></textarea>
+              </div>
+            </div>
+
+            <!-- Form actions -->
+            <div class="form-group">
+              <div class="col-md-12 text-right">
+                <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#exampleModal">Skicka</button>
+ <!--               <button type="submit" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#exampleModal">Skicka</button>
+-->
+              </div>
+            </div>
+          </fieldset>
+        </form>
       </div>
-
     </div>
   </div>
-</div><br><br>
+</div>
+
 <div id="test2"></div>
 <div id="test">
 </div>
