Påbörjade funktion att ta bort enskilda produkter från carten

--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -12,7 +12,7 @@
     <style>
     </style>
 </head>
-<body onload="printCart()">
+<body>
 
 <!-- Header with logo -->
 <div class="jumbotron">
@@ -84,7 +84,7 @@
 
 <!-- Cart -->
 <div class="container">
-    <div class="listofproducts">
+    <div class="fulllistofproducts">
     </div>
     <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="emptyCart()">Töm vagnen</button>
     <a href="/checkout" class="btn btn-primary">Betala</a>
