--- a/src/main/resources/templates/Books/childrensBooks.html
+++ b/src/main/resources/templates/Books/childrensBooks.html
@@ -71,14 +71,14 @@
           </ul>
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Böcker <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="/Books/allBooks">Alla böcker</a></li>
+            <li><a href="/Books/allBooks">Alla Böcker</a></li>
             <li><a href="/Books/childrensBooks">Barnböcker</a></li>
             <li><a href="/Books/non-fiction">Facklitteratur</a></li>
             <li><a href="/Books/fiction">Skönlitteratur</a></li>
           </ul>
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Hobby & Fritid <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="/Hobby/allHobbies">Allt inom hobby & fritid</a></li>
+            <li><a href="/Hobby/allHobbies">Allt inom Hobby & Fritid</a></li>
             <li><a href="/Hobby/hobbiesAndGames">Hobby & Spel</a></li>
             <li><a href="/Hobby/moviesAndMusic">Film & Musik</a></li>
             <li><a href="/Hobby/sport">Sport & Fritid </a></li>
@@ -106,6 +106,8 @@
     </div>
   </div>
 </nav>
+
+<div class="page-header"><h1>Barnböcker</h1></div>
 
 <!-- Product image and information -->
 <div class="container">
@@ -142,7 +144,7 @@
   </form>
 </footer>
 
-<script src="shoppingcart.js"></script>
+<script src="/shoppingcart.js"></script>
 
 </body>
 </html>
