--- a/src/main/resources/templates/Books/fiction.html
+++ b/src/main/resources/templates/Books/fiction.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Sci-Fi</title>
+    <title>Skönlitteratur</title>
     <link rel="icon" type="image/x-icon" href="/images/logga-liten-ljus.svg">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -71,14 +71,14 @@
                     </ul>
                 <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Böcker <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="/Books/allBooks">Alla böcker</a></li>
+                        <li><a href="/Books/allBooks">Alla Böcker</a></li>
                         <li><a href="/Books/childrensBooks">Barnböcker</a></li>
                         <li><a href="/Books/non-fiction">Facklitteratur</a></li>
                         <li><a href="/Books/fiction">Skönlitteratur</a></li>
                     </ul>
                 <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Hobby & Fritid <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="/Hobby/allHobbies">Allt inom hobby & fritid</a></li>
+                        <li><a href="/Hobby/allHobbies">Allt inom Hobby & Fritid</a></li>
                         <li><a href="/Hobby/hobbiesAndGames">Hobby & Spel</a></li>
                         <li><a href="/Hobby/moviesAndMusic">Film & Musik</a></li>
                         <li><a href="/Hobby/sport">Sport & Fritid </a></li>
@@ -108,6 +108,7 @@
 </nav>
 
 <!-- <a class="categorylinks" href="/Books/Sci-Fi"> Sci-Fi </a> -->
+<div class="page-header"><h1>Skönlitteratur</h1></div>
 
 <!-- Product image and information -->
 <div class="container">
@@ -144,7 +145,7 @@
     </form>
 </footer>
 
-<script src="shoppingcart.js"></script>
+<script src="/shoppingcart.js"></script>
 
 </body>
 </html>
