--- a/src/main/resources/templates/Clothes/Children.html
+++ b/src/main/resources/templates/Clothes/Children.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-  <title>Bootstrap Example</title>
+  <title>Kläder & Skor - Barn</title>
   <link rel="icon" type="image/x-icon" href="/images/logga-liten-ljus.svg">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -106,6 +106,9 @@
     </div>
   </div>
 </nav>
+
+<div class="page-header"><h1>Barnkläder och barnskor</h1></div>
+
 <div class="container">
   <div class="row">
     <div class="productlisting" th:each="product : ${products}">
@@ -140,7 +143,7 @@
   </form>
 </footer>
 
-<script src="shoppingcart.js"></script>
+<script src="/shoppingcart.js"></script>
 
 </body>
 </html>
