--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -103,7 +103,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#"><span class="glyphicon glyphicon-user"></span> Mitt konto</a></li>
         <li><span id="cartsum" class="productsummation productcounter">0</span></li>
-        <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span> Varukorg</a></li>
+        <li><a href="/cart"><span class="glyphicon glyphicon-shopping-cart"></span> Varukorg</a></li>
       </ul>
     </div>
   </div>
@@ -143,7 +143,7 @@
   </form>
 </footer>
 
-<script src="shoppingcart.js"></script>
+<script src="/shoppingcart.js"></script>
 
 </body>
 </html>
