Ändrat i html aboutuS avseende trädet och att den är centrerad från mitten och växer därifrån.

--- a/src/main/resources/templates/AboutUs/AboutUs.html
+++ b/src/main/resources/templates/AboutUs/AboutUs.html
@@ -89,15 +89,18 @@
 </div>
 
   </div>
+<h2 id="textCenter" style="text-align: center">Vår vision med loppisshoppis.....</h2>
 
-<div class="zoom-in-out-box">
+<p id="textCenter2"style="text-align: center" >Vår butik värnar om miljö och produktsvinn</p>
 
-  <div class="container">
-    <img onclick="location.href='/';" src="/images/tree2.png" id="treeimg" height="300">
+
+<div class="zoom-in-out-box"style="text-align: center">
+    <img onclick="location.href='/';" src="/images/tree2.png" id="treeimg" height="300" >
   </div>
 </div><br><br>
-  <h2>Center an Image</h2>
-  <p>Vår butik värnar om miljö och produktsvinn</p>
+
+
+
 
 <!-- Footer -->
 <footer class="container-fluid text-center">
