--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -88,6 +88,11 @@ footer {
 }
 
 
+.checkout-row .col-50 {
+    /* Text: Billing info */
+    -ms-flex: 50%; /* IE10 */
+    flex: 50%;
+}
 
 /***** Styling for frontpage *****/
 
@@ -156,6 +161,11 @@ footer {
     transform: scale(1.2);
 }
 
+.checkout-row .col-25,
+.checkout-row .col-50,
+.checkout-row .col-75 {
+    padding: 0 16px;
+}
 #productimg {
     /* Centers the product image and gives all product images the same height */
     padding: 10px;
@@ -165,6 +175,87 @@ footer {
 }
 
 
+
+/***** Styling for cart page *****/
+
+.listofproducts {
+    width: 50%;
+}
+
+tr.spaceOver>td {
+    padding-top: 1em;
+}
+
+
+#treeimg{
+transform: translate(0%, 10%);
+border-right-style: solid;
+justify-items: center;
+display: inline-grid;
+
+   }
+}
+
+.textCenter{
+text-align:center;
+}
+
+/***** Styling for checkout page *****/
+
+.container-form {
+    background-color: #f2f2f2;
+    padding: 5px 20px 15px 20px;
+    border: 1px solid #257D5E;
+    border-radius: 3px;
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+.container-form h3 {
+    font-family: "Segoe UI",Arial,sans-serif;
+    font-weight: 400;
+}
+
+.container-form #checkout-prodamount,
+.container-form #checkout-totamount {
+    color: black;
+}
+
+.container-form .btn {
+    background-color: #257D5E;
+    color: white;
+    padding: 12px;
+    margin: 10px 0;
+    border: none;
+    width: 100%;
+    border-radius: 3px;
+    cursor: pointer;
+    font-size: 17px;
+}
+
+.container-form .btn:hover {
+    background-color:  #0E2A36;
+}
+
+.container-form input[type=text] {
+    /* Billing info - input */
+    width: 100%;
+    margin-bottom: 20px;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+}
+
+.container-form label {
+    /* Billing info headers */
+    margin-bottom: 10px;
+    display: block;
+}
+
+.container-form span.price {
+    float: right;
+    color: grey;
+}
 
 /***** Styling for product page *****/
 
@@ -176,15 +267,20 @@ footer {
     width:100%;
 }
 
-
-#treeimg{
-  width: 80%;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+.checkout-row {
+    /* rows on the checkout page */
+    display: -ms-flexbox; /* IE10 */
+    display: flex;
+    -ms-flex-wrap: wrap; /* IE10 */
+    flex-wrap: wrap;
+    margin: 0 -16px;
 }
 
+.checkout-row .col-25 {
+    /* Text: purchases & sum in container with products */
+    -ms-flex: 25%; /* IE10 */
+    flex: 25%;
+}
 
 /***** Styling for cart page *****/
 
@@ -198,26 +294,46 @@ tr.spaceOver>td {
 
 /***** Styling for about us page *****/
 
-.zoom-in-out-box {
+.zoom-in-out-box:hover{
   margin: 24px;
-  width: 50px;
+  width: auto;
   height: 50px;
   animation: zoom-in-zoom-out 50s ease infinite;
+
 }
 
 @keyframes zoom-in-zoom-out {
   0% {
     transform: scale(1, 1);
   }
-    25% {
-    transform: scale(1.25, 1.25);
+    10% {
+      transform: scale(1.1, 1.1);
+    }
+
+    20% {
+    transform: scale(1.2, 1.2);
   }
+   30% {
+      transform: scale(1.3, 1.3);
+    }
+    40% {
+          transform: scale(1.4, 1.4);
+        }
   50% {
     transform: scale(1.5, 1.5);
   }
-  75% {
-    transform: scale(1.75, 1.75);
+  60% {
+      transform: scale(1.6, 1.6);
+    }
+  70% {
+    transform: scale(1.7, 1.7);
   }
+  80% {
+      transform: scale(1.8, 1.8);
+    }
+    90% {
+          transform: scale(1.9, 1.9);
+        }
   100% {
     transform: scale(2, 2);
   }
