bytt namn på kategorier, mappat ihop

--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -58,41 +58,36 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Kläder <span class="caret"></span></a>
+        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Kläder & Skor <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="/Clothes/allClothes">Alla kläder</a></li>
+            <li><a href="/Clothes/allClothes">Allt inom Kläder & Skor</a></li>
             <li><a href="/Clothes/Women">Dam</a></li>
             <li><a href="/Clothes/Men">Herr</a></li>
             <li><a href="/Clothes/Children">Barn</a></li>
           </ul>
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Hemmet<span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="/Home/allHome">Allt för hemmet</a></li>
+            <li><a href="/Home/allHome">Allt för Hemmet</a></li>
             <li><a href="/Home/homeDecor">Inredning</a></li>
             <li><a href="/Home/electronics">Hemelektronik</a></li>
-            <li><a href="/Home/kitchenSupplies">Husgeråd</a></li>
+            <li><a href="Home/kitchenSupplies">Husgeråd</a></li>
           </ul>
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Böcker <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="/Books/allBooks">Alla böcker</a></li>
+            <li><a href="/Books/allBooks">Alla Böcker</a></li>
             <li><a href="/Books/childrensBooks">Barnböcker</a></li>
             <li><a href="/Books/non-fiction">Facklitteratur</a></li>
             <li><a href="/Books/fiction">Skönlitteratur</a></li>
           </ul>
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Hobby & Fritid <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="/Hobby/allHobbies">Allt inom hobby & fritid</a></li>
+            <li><a href="/Hobby/allHobbies">Allt inom Hobby & Fritid</a></li>
             <li><a href="/Hobby/hobbiesAndGames">Hobby & Spel</a></li>
             <li><a href="/Hobby/moviesAndMusic">Film & Musik</a></li>
             <li><a href="/Hobby/sport">Sport & Fritid </a></li>
             <li><a href="/Hobby/toys">Leksaker</a></li>
           </ul>
-        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Vintage <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="/Vintage/1920">1920-1950</a></li>
-            <li><a href="/Vintage/1950">1950-1970</a></li>
-            <li><a href="/Vintage/1970">1970-2000</a></li>
-          </ul>
+
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Om oss <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="/AboutUs/AboutUs">Vår vision</a></li>
@@ -143,7 +138,7 @@
   </form>
 </footer>
 
-<script src="shoppingcart.js"></script>
+<script src="/shoppingcart.js"></script>
 
 </body>
 </html>
