Ändrat i html för frontpage, avseende id klass cartsum, fick ner siffran i jämnhöjd med andra boxar.

--- a/src/main/resources/templates/Clothes/Men.html
+++ b/src/main/resources/templates/Clothes/Men.html
@@ -121,7 +121,7 @@
 
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="#"><span class="glyphicon glyphicon-user"></span> Mitt konto</a></li>
-                <li><span id="cartsum" class="productsummation productcounter">0</span></li>
+                <li><a><span id="cartsum" class="productsummation productcounter">0</span></a></li>
                 <li><a href="/cart"><span class="glyphicon glyphicon-shopping-cart"></span> Varukorg</a></li>
             </ul>
         </div>
