--- a/src/main/resources/templates/Home/homeDecor.html
+++ b/src/main/resources/templates/Home/homeDecor.html
@@ -98,7 +98,7 @@
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
-        <li><span id="cartsum">0</span></li>
+        <li><a><span id="cartsum" class="productsummation productcounter">0</span></a></li>
         <li><a href="#"><span class="glyphicon glyphicon-user"></span> Mitt konto</a></li>
         <li><a href="#"><span class="glyphicon glyphicon-shopping-cart"></span> Varukorg</a></li>
         <li><a onclick="location.href='/';" style="cursor: pointer;"><span class="glyphicon glyphicon-backward"></span> Tillbaka</a></li>
