Funktioner för att logga in, simpel inloggningssida, check vid sessions för åtkomst till inloggningssidan

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -110,6 +110,8 @@
     </div>
 </nav>
 
+<div th:if></div>
+
 <form action="/login" th:method="POST">
     <label for="user">Användarnamn</label>
     <input type="text" id="user" name="username">
