--- a/src/main/resources/templates/frontpage.html
+++ b/src/main/resources/templates/frontpage.html
@@ -45,9 +45,7 @@
     </div>
 </div>
 
-<!--<div th:text="${'Inloggad som: ' + session?.siteuser?.username}"></div>-->
 <span class="logintxt">Inloggad som:<span th:text="${session?.siteuser?.username} ?: ' (Inte inloggad)'"></span></span>
-
 <!-- Navbar -->
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
@@ -100,7 +98,7 @@
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#"><span class="glyphicon glyphicon-user"></span> Mitt konto</a></li>
+                <li><a href="/login"><span class="glyphicon glyphicon-user"></span> Mitt konto</a></li>
                 <li><a><span id="cartsum" class="productsummation productcounter">0</span></a></li>
                 <li><a href="/cart"><span class="glyphicon glyphicon-shopping-cart"></span> Varukorg</a></li>
             </ul>
