Ändrat i html för frontpage, avseende id klass cartsum, fick ner siffran i jämnhöjd med andra boxar.

--- a/src/main/resources/templates/AboutUs/AboutUs.html
+++ b/src/main/resources/templates/AboutUs/AboutUs.html
@@ -95,16 +95,18 @@
     <img onclick="location.href='/';" src="/images/tree2.png" id="treeimg" height="300" >
   </div>
 </div><br><br>
-
+<div id="test">
+</div>
 
 <!-- Footer -->
-<footer class="container-fluid text-center" style="bottom:auto;">
+<footer class="container-fluid text-center" style="position:absolute; bottom:50px;" >
   <p>Bli en återvinnare!</p>
   <form class="form-inline">Anmäl dig till vårt nyhetsbrev:
     <input type="email" class="form-control" size="50" placeholder="Mejladress">
     <button type="button" class="btn btn-danger" id="footerbtn" >Skicka</button>
   </form>
 </footer>
+
 
 <script src="/shoppingcart.js"></script>
 
